templates/service.yml
apiVersion: v1
kind: Service
metadata:
  name: mayan-edms
  labels:
    app.kubernetes.io/name: mayan-edms
spec:
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: mayan-edms
