templates/network_policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mayan-postgresql
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: postgresql
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app.kubernetes.io/name: mayan-edms
      ports:
        - port: 5432
          protocol: TCP
  egress:
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mayan-redis
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: redis
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app.kubernetes.io/name: mayan-edms
      ports:
        - port: 6379
          protocol: TCP
  egress:
  policyTypes:
    - Ingress
    - Egress

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mayan-edms
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: mayan-edms
  egress:
    - to:
      - podSelector:
          matchLabels:
            app.kubernetes.io/name: postgresql
      ports:
        - port: 5432
          protocol: TCP
    - to:
      - podSelector:
          matchLabels:
            app.kubernetes.io/name: redis
      ports:
        - port: 6379
          protocol: TCP
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: kube-system
        podSelector:
          matchLabels:
            k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
  policyTypes:
    - Egress
